packages/astro/e2e/fixtures/errors/src/pages/astro-hydration-error.astro
---
import SvelteDirectiveError from '../components/svelte/SvelteDirectiveError.svelte';
---

<div>
  <SvelteDirectiveError client:loadm />
</div>
